# Anbar

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/adapters/: bucket.rs  object.rs  user.rs
src/drivers/: db.rs  mod.rs  s3.rs  web_server.rs
src/entities/: bucket.rs  mod.rs  object.rs  user.rs
src/interactors/: storage.rs
