[package]
name = "anbar"
version = "0.1.0"
authors = ["Mehdy Khoshnoody <mehdy.khoshnoody@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.10"
sha2 = "0.9"
regex = "1.4"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.9"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
